DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Action_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Name__c</fullName>
    <label>Action Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>