DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Action_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes relating to the Action</inlineHelpText>
    <label>Action Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>