DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Role__c.amc__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>You are currently searching for Active Roles. You can widen your search to include Inactive Roles.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>