DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Action_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Owner_Email__c</fullName>
    <label>Action Owner Email</label>
    <type>Email</type>
</CustomField>