DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Action_Owner_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Owner_Email_Formula__c</fullName>
    <formula>amc__Action_Owner__r.amc__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Owner Email Formula</label>
    <type>Text</type>
</CustomField>