DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Actual_End_Time__c.field-meta.xml
<CustomField>
    <fullName>amc__Actual_End_Time__c</fullName>
    <description>Used by the Scheduler to plot an end time on the timeline.</description>
    <inlineHelpText>Used by the Scheduler to plot an end time on the timeline.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>