DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Allocation_Variance_Total__c.field-meta.xml
<CustomField>
    <fullName>amc__Allocation_Variance_Total__c</fullName>
    <formula>amc__Total_Hours_Scheduled__c - amc__Total_Hours_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates the difference between Total Hours Scheduled and Total Hours Allocated</inlineHelpText>
    <label>Allocation Variance - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>