DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Baseline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Baseline_End_Date__c</fullName>
    <inlineHelpText>Tracks the original End Date set for this Action</inlineHelpText>
    <label>Baseline End Date</label>
    <type>Date</type>
</CustomField>