DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Benefit__c.field-meta.xml
<CustomField>
    <fullName>amc__Benefit__c</fullName>
    <description>Detailed notes on the benefits that will be gained by delivering this Requirement</description>
    <inlineHelpText>Detailed notes on the benefits that will be gained by delivering this Requirement</inlineHelpText>
    <label>Benefit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>