DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>amc__Budget_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Budget Item this record relates to</inlineHelpText>
    <label>Budget Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>amc__Budget_Item__c.amc__Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Budget_Item__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>