DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Completion_Overridden__c.field-meta.xml
<CustomField>
    <fullName>amc__Completion_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether a User has manually overridden the Completion % value. If this field is TRUE, the Completion % will stop being updated automatically when new Time Logs are entered</description>
    <inlineHelpText>Identifies whether a User has manually overridden the Completion % value. If this field is TRUE, the Completion % will stop being updated automatically when new Time Logs are entered</inlineHelpText>
    <label>Completion % Overridden</label>
    <type>Checkbox</type>
</CustomField>