DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>amc__Completion_Percent__c</fullName>
    <inlineHelpText>Identifies the completion percentage of progress made. This field is updated manually and can be used to adjust the completed billable value and remaining effort</inlineHelpText>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>