DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Cost_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Hourly_Rate__c</fullName>
    <formula>if(AND(NOT(ISNULL(amc__Hours_Scheduled_Value_Cost__c)),NOT(ISNULL(amc__Total_Hours_Scheduled__c)),amc__Total_Hours_Scheduled__c&gt;0),amc__Hours_Scheduled_Value_Cost__c / amc__Total_Hours_Scheduled__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the Cost Hourly Rate, based on Hours Scheduled Value (Cost) / Hours Scheduled – Non Billable</inlineHelpText>
    <label>Cost Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>