DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Custom_Status__c</fullName>
    <description>Add your Custom Status values here, then map the values in the Console.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
                <default>true</default>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>