DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Dependant_Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Dependant_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The action selected here is the Parent in the dependency relationship. (Previously Labelled Dependant Action)</inlineHelpText>
    <label>Parent Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>