DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__End_Time__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Time__c</fullName>
    <formula>IF(NOT(ISNULL(amc__Actual_End_Time__c)),TEXT(amc__Actual_End_Time__c),
IF(LEN(TEXT( VALUE(TEXT(amc__Start_Hour__c)) + FLOOR(amc__Hours_Scheduled__c))) = 1, &apos;0&apos;,&apos;&apos;) &amp;
IF(ISBLANK(TEXT(amc__Start_Hour__c)), &apos;00&apos;, TEXT( VALUE(TEXT(amc__Start_Hour__c)) + FLOOR(amc__Hours_Scheduled__c)))

&amp; &quot;:&quot; &amp;
IF(LEN(TEXT(ROUND( ((VALUE(TEXT(amc__Start_Minute__c))/60) + MOD(amc__Hours_Scheduled__c,1) ) * 60, 0))) = 1, &apos;0&apos;,&apos;&apos;) &amp;
IF(ISBLANK(TEXT(amc__Start_Minute__c)), &apos;00&apos;, TEXT(ROUND( ((VALUE(TEXT(amc__Start_Minute__c))/60) + MOD(amc__Hours_Scheduled__c,1) ) * 60, 0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Text</type>
</CustomField>