DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Billable_Capacity__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Action should be excluded from Billable Capacity</inlineHelpText>
    <label>Exclude from Billable Capacity</label>
    <type>Checkbox</type>
</CustomField>