DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Billable_Capacity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Billable_Capacity_Indicator__c</fullName>
    <formula>If(amc__Milestone__r.amc__Exclude_from_Billable_Capacity_Indicator__c = TRUE, TRUE, amc__Exclude_from_Billable_Capacity__c)</formula>
    <inlineHelpText>Formula: Identifies if this Action should be excluded from Billable Capacity</inlineHelpText>
    <label>Exclude from Billable Capacity Indicator</label>
    <type>Checkbox</type>
</CustomField>