DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Client_Page_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Client_Page_Indicator__c</fullName>
    <formula>OR(amc__Exclude_from_Client_Page__c,  amc__Milestone__r.amc__Exclude_from_Client_Page__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies if this Action should be excluded from the Client Overview Page</inlineHelpText>
    <label>Exclude from Client Page Indicator</label>
    <type>Checkbox</type>
</CustomField>