DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Daily_Digest__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Daily_Digest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this Action should be excluded from the Daily Digest</description>
    <inlineHelpText>Identifies if this Action should be excluded from the Daily Digest</inlineHelpText>
    <label>Exclude from Daily Digest</label>
    <type>Checkbox</type>
</CustomField>