DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Gantt_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Gantt_Indicator__c</fullName>
    <formula>IF( amc__Milestone__r.amc__Exclude_from_Gantt__c  = TRUE, TRUE, amc__Exclude_from_Gantt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies whether this Action should be hidden from the Gantt Chart.</inlineHelpText>
    <label>Exclude from Gantt Indicator</label>
    <type>Checkbox</type>
</CustomField>