DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Action should be excluded from the Project Status Report</inlineHelpText>
    <label>Exclude from Status Report</label>
    <type>Checkbox</type>
</CustomField>