DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Status_Report_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Status_Report_Indicator__c</fullName>
    <formula>If(amc__Milestone__r.amc__Exclude_from_Status_Report__c = TRUE, TRUE, amc__Exclude_from_Status_Report__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if this Action should be excluded fro the Project Status Report. Will be TRUE if either Action or parent Milestone is set to TRUE</inlineHelpText>
    <label>Exclude from Status Report Indicator</label>
    <type>Checkbox</type>
</CustomField>