DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prevents Checked Actions from Appearing on the Timesheet</inlineHelpText>
    <label>Exclude from Timesheet</label>
    <type>Checkbox</type>
</CustomField>