DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Utilisation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Action should be excluded from the Role Utilisation Report</inlineHelpText>
    <label>Exclude from Utilisation</label>
    <type>Checkbox</type>
</CustomField>