DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Exclude_from_Whiteboard_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Whiteboard_Indicator__c</fullName>
    <formula>IF(amc__Milestone__r.amc__Exclude_from_Whiteboard_Indicator__c = TRUE, TRUE, amc__Exclude_from_Whiteboard__c)</formula>
    <inlineHelpText>Indicates if this Action should be excluded from the Whiteboard. If the Action &apos;Exclude from Whiteboard&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Milestone &apos;Exclude from Whiteboard Indicator&apos; Field.</inlineHelpText>
    <label>Exclude from Whiteboard Indicator</label>
    <type>Checkbox</type>
</CustomField>