DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Financial_Tracker__c.field-meta.xml
<CustomField>
    <fullName>amc__Financial_Tracker__c</fullName>
    <formula>TEXT(amc__Hours_Completed_Non_Billable__c) &amp; TEXT(amc__Hours_Completed_Value_Cost__c) &amp; TEXT(amc__Hours_Remaining_Non_Billable__c) &amp;  TEXT(amc__Hours_Remaining_Value_Cost__c) &amp; TEXT(amc__Hours_Scheduled_Non_Billable__c) &amp; TEXT(amc__Hours_Scheduled_Value_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by the action trigger to update project financials.</inlineHelpText>
    <label>Financial Tracker</label>
    <type>Text</type>
</CustomField>