DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Gantt_Collapsed__c.field-meta.xml
<CustomField>
    <fullName>amc__Gantt_Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, indicates the Action is collapsed on the Gantt</inlineHelpText>
    <label>Gantt Collapsed</label>
    <type>Checkbox</type>
</CustomField>