DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Gantt_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Gantt_Sort_Order__c</fullName>
    <inlineHelpText>If supplied, determines what order the Action is displayed in the Gantt relative to it&apos;s siblings.</inlineHelpText>
    <label>Gantt Sort Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>