DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Has_Dependant_Actions__c.field-meta.xml
<CustomField>
    <fullName>amc__Has_Dependant_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Action Trigger to mark actions that have dependant child actions that need processing.</description>
    <label>Has Dependant Actions</label>
    <type>Checkbox</type>
</CustomField>