DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Allocated_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Allocated_Billable__c</fullName>
    <inlineHelpText>Identifies the sum of billable hours from related Role Allocation records</inlineHelpText>
    <label>Hours Allocated - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>