DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Completed_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Cost__c</fullName>
    <inlineHelpText>This field calculates the completed value (Billable) of this action by multiplying the Hours Completed with the Role&apos;s Hourly Rate. (Previously labelled Hours Completed Cost)</inlineHelpText>
    <label>Hours Completed Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>