DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Completed_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the number of non billable hours completed for this Action
Filtered to include Time Logs where Non Billable Tracker = TRUE AND Approval Status = Approved</inlineHelpText>
    <label>Hours Completed - Non Billable</label>
    <summarizedField>amc__Time_Log__c.amc__Hours_Completed__c</summarizedField>
    <summaryFilterItems>
        <field>amc__Time_Log__c.amc__Non_Billable_Tracker__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>amc__Time_Log__c.amc__Roll_Up_to_Action__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>