DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining__c</fullName>
    <formula>if(OR( IsPickVal(amc__Status__c, &quot;Complete&quot;), IsPickVal(amc__Status__c, &quot;Cancelled&quot;), amc__Hours_Completed__c &gt; amc__Hours_Scheduled__c), 0, amc__Hours_Scheduled__c -  amc__Hours_Completed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the Hours Remaining - Billable. (Previously Labelled Hours Remaining)</inlineHelpText>
    <label>Hours Remaining - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>