DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Remaining_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Cost__c</fullName>
    <inlineHelpText>This field calculates the remaining value (Billable) of this action by multiplying the Hours Remaining with the Role&apos;s Hourly Rate. (Previously labelled Hours Remaining Cost)</inlineHelpText>
    <label>Hours Remaining Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>