DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Remaining_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
    <formula>if(OR( IsPickVal(amc__Status__c, &quot;Complete&quot;), IsPickVal(amc__Status__c, &quot;Cancelled&quot;), amc__Hours_Completed_Non_Billable__c &gt; amc__Hours_Scheduled_Non_Billable__c), 0, amc__Hours_Scheduled_Non_Billable__c - amc__Hours_Completed_Non_Billable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the number of non billable hours remaining for this Action</inlineHelpText>
    <label>Hours Remaining - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>