DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Remaining_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Value_Cost__c</fullName>
    <inlineHelpText>Summarises the Hours Remaining Value of the Action Costs based on the Total Hours Remaining</inlineHelpText>
    <label>Hours Remaining Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>