DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies the number of Billable hours scheduled for this Action. (Previously labelled Hours Scheduled)</inlineHelpText>
    <label>Hours Scheduled - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>