DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Hours_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Cost__c</fullName>
    <inlineHelpText>This field calculates the Scheduled Cost (Billable) of this action by multiplying the Hours Scheduled with the Role&apos;s Hourly Rate. (Previously labelled Hours Scheduled Cost)</inlineHelpText>
    <label>Hours Scheduled Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>