DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__I_want_to__c.field-meta.xml
<CustomField>
    <fullName>amc__I_want_to__c</fullName>
    <inlineHelpText>A description of what the Persona would like to be able to do</inlineHelpText>
    <label>I want to</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>