DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>amc__Is_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Action will be recurring</inlineHelpText>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>