DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Last_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>amc__Last_Owner_Change__c</fullName>
    <description>Used by trigger to determine actions that should appear in the daily digest</description>
    <label>Last Owner Change</label>
    <type>DateTime</type>
</CustomField>