DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Material_Costs_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Remaining__c</fullName>
    <formula>IF(amc__Material_Costs_Scheduled__c &gt; amc__Expense_Summary__c, amc__Material_Costs_Scheduled__c - amc__Expense_Summary__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Costs Remaining (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>