DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Material_Costs_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Scheduled_Cost__c</fullName>
    <inlineHelpText>Identifies the cost value of any Scheduled Material Costs related to the Action</inlineHelpText>
    <label>Material Costs Scheduled (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>