DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone__c</fullName>
    <label>Milestone</label>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>