DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Milestone_Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Is_Recurring__c</fullName>
    <formula>amc__Milestone__r.amc__Is_Recurring__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the parent Milestone is recurring</inlineHelpText>
    <label>Milestone Is Recurring</label>
    <type>Checkbox</type>
</CustomField>