DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>