DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Number_of_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>amc__Number_of_Recurrences__c</fullName>
    <inlineHelpText>Identifies the number of times this Action should be recurred</inlineHelpText>
    <label>Number of Recurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>