DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__P_L_Actual__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Actual__c</fullName>
    <formula>IF(
 OR(
  ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;), 
  ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &apos;Fixed Price + Expenses&apos;)
 ),
 (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Completed_Value_Cost__c +  amc__Material_Costs_Completed_Cost__c), 
 (amc__Hours_Completed_Cost__c +  amc__Expense_Summary__c ) - (amc__Hours_Completed_Value_Cost__c + amc__Material_Costs_Completed_Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the P&amp;L for the Action based on the Actual figures. If Fixed Price used Scheduled Billable Value otherwise use Completed Billable Value and minus Hours Completed Value Cost</inlineHelpText>
    <label>P&amp;L (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>