DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__P_L_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Scheduled__c</fullName>
    <formula>(amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Scheduled_Value_Cost__c +  amc__Material_Costs_Scheduled_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the P&amp;L for the Action based on the Scheduled figures</inlineHelpText>
    <label>P&amp;L (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>