DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>amc__Pain_Points__c</fullName>
    <description>Detailed notes on the current pain point that is driving this Action</description>
    <inlineHelpText>Detailed notes on the current pain point that is driving this Action</inlineHelpText>
    <label>Pain Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>