DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Id__c</fullName>
    <formula>CASESAFEID(amc__Milestone__r.amc__Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by triggers to prevent unnecessary queries.</inlineHelpText>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>