DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Projected_Hours_Remaining_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Hours_Remaining_Billable__c</fullName>
    <formula>IF(AND(amc__Hours_Completed__c &gt; 0, amc__Completion_Percent__c &gt; 0), (amc__Hours_Completed__c / amc__Completion_Percent__c)-amc__Hours_Completed__c , amc__Hours_Remaining__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the projected number of billable hours remaining on this action</inlineHelpText>
    <label>Projected Hours Remaining - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>