DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Projected_P_L__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_P_L__c</fullName>
    <formula>IF(OR(
 ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;),
 ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;)
 ), 
 (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Projected_Value_Cost__c + amc__Material_Costs_Completed_Cost__c +  amc__Material_Costs_Remaining_Cost__c),
 ( amc__Projected_Value_Billable__c + amc__Expense_Summary__c +  amc__Material_Costs_Remaining__c) - (amc__Projected_Value_Cost__c + amc__Material_Costs_Completed_Cost__c + amc__Material_Costs_Remaining_Cost__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the Projected Profit &amp; Loss position for this Action. If Billing Type = Fixed Price, Hours Scheduled Value (Billable) - Projected Value (Cost), otherwise Projected Value (Billable) - Projected Value (Cost)</inlineHelpText>
    <label>Projected P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>