DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Projected_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Hours__c</fullName>
    <formula>amc__Projected_Total_Hours_Billable__c + amc__Projected_Total_Hours_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the total projected hours for this Action. Sums Projected Total Hours – Billable + Projected Total Hours – Non Billable</inlineHelpText>
    <label>Projected Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>